test/TestPhases/exportinference/invalid/enum.blc
module exposes Color, c

typealias T = int32

const c = 42 : T

enum Color : T
    Red = 1
    Blue = 2 default
extension // Thats bad because internal structure and methods are either hidden or exposed together 
    function Init () returns Color
        return Red
    end
end

const RED: Color = .Red
